--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -1,2 +1,6 @@
 <h1>Welcome</h1>
-<p>Welcome!</p>
+<p>I welcome you I welcome you I welcome you I welcome you I welcome you I welcome you
+I welcome you I welcome you I welcome you
+I welcome you I welcome you I welcome you
+I welcome you I welcome you I welcome you
+I welcome you I welcome you I welcome you</p>
