--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,23 +1,42 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>GoButler</title>
+  <title>Steve Z</title>
+
+
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+
+  <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+
   <%= csrf_meta_tags %>
+
 </head>
 
 <body>
+  <div class="container">
+    <div class="page-header">
+      <ul class="nav nav-pills pull-right">
+        <li>
+          <%= link_to "Home","/" %>
+        </li>
 
-<%= link_to "Home",
- "/" %>
-
-<%= link_to "About",
-  "/about" %>
-
+        <li>
+          <%= link_to "About","/about" %>
+        </li>
+      </ul>
 
 
-<%= yield %>
+      <h1> <%= link_to 'crumblr', "/" %> <small>// home baked goodness</small></h1>
+    </div>
+
+    <div class="col-md-6 col-md-offset-3">
+      <%= yield %>
+    </div>
+
+  </div>
+
 
 </body>
 </html>
