--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Steve Z</title>
+  <title>Steve Zerneri</title>
 
 
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
@@ -20,6 +20,10 @@
       <ul class="nav nav-pills pull-right">
         <li>
           <%= link_to "Home","/" %>
+        </li>
+
+        <li>
+          <%= link_to "Manage Posts","/posts" %>
         </li>
 
         <li>
