--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -1,6 +1,6 @@
-<h1>Welcome</h1>
-<p>I welcome you I welcome you I welcome you I welcome you I welcome you I welcome you
-I welcome you I welcome you I welcome you
-I welcome you I welcome you I welcome you
-I welcome you I welcome you I welcome you
-I welcome you I welcome you I welcome you</p>
+<% @posts.each do |post| %>
+ <%= render 'posts/post', post: post %>
+
+ <br><br><br><br>
+ 
+<%end%>
