--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,13 +3,5 @@
   <%= notice %>
 </p>
 <% end %>
-<p>
-    <h2><%= @post.title %></h2>
-</p>
 
-<p>
-  <%= @post.content %>
-</p>
-
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+<%= render 'post', post: @post %>
