Added Support For Images

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
       </ul>
 
 
-      <h1> <%= link_to 'crumblr', "/" %> <small>// home baked goodness</small></h1>
+      <h1> <%= link_to 'Steve Zerneri', "/" %> <small>// trying not to be average</small></h1>
     </div>
 
     <div class="col-md-6 col-md-offset-3">
