--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,5 @@
 <h1>About</h1>
 
-<p>This app was built in Tal Safran's <%= link_to "Ruby on Rails class on Skillshare.",
-"http://skillshare.com" %>
+<p>
+  I'm 27 currently living in NYC, but spent time across the West Coast.
 </p>
