--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -3,7 +3,11 @@
 </p>
 
 <p>
+  <% if post.kind == 'image' %>
+    <%= image_tag post.content, style: "width:100%" %>
+  <%else%>
   <%= simple_format post.content %>
+  <%end%>
 </p>
 
 <p class="text-muted">
