--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,5 +1,15 @@
 <p>
-    <h2><%= link_to post.title, post %></h2>
+    <h2>
+      <div class="pull-right">
+        <%= form_for(Heart.new) do |f| %>
+        <%= f.hidden_field :post_id, value: post.id %>
+          <%= f.submit "♥",class: "btn btn-danger" %>
+          <% end %>
+      </div>
+
+      <%= link_to post.title, post %>
+
+    </h2>
 </p>
 
 <p>
@@ -13,5 +23,9 @@
 <p class="text-muted">
   <small>
     Posted on <%= post.created_at.to_formatted_s(:long) %>
+  </small>
+
+  <small class ="pull-right">
+    <%= post.hearts.count %> hearts
   </small>
 </p>
