--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,6 @@
+<!--
+
+
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Posts</h1>
@@ -26,4 +29,4 @@
 
 <br>
 
-<%= link_to 'New Post', new_post_path %>
+<%= link_to 'New Post', new_post_path %> -->
