--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,42 +1,74 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Steve Zerneri</title>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../favicon.ico">
 
+    <title>Cover Template for Bootstrap</title>
 
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <!-- Bootstrap core CSS -->
+    <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <!-- Custom styles for this template -->
+    <%= stylesheet_link_tag 'cover' %>
 
-  <%= csrf_meta_tags %>
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
 
-</head>
+  <body>
 
-<body>
-  <div class="container">
-    <div class="page-header">
-      <ul class="nav nav-pills pull-right">
-        <li>
-          <%= link_to "Home","/" %>
-        </li>
-        
-        <li>
-          <%= link_to "About","/about" %>
-        </li>
-      </ul>
+    <div class="site-wrapper">
 
+      <div class="site-wrapper-inner">
 
-      <h1> <%= link_to 'Steve Zerneri', "/" %> <small>// trying not to be average</small></h1>
+        <div class="cover-container">
+
+          <div class="masthead clearfix">
+            <div class="inner">
+              <h3 class="masthead-brand">Steve Zerneri</h3>
+              <nav>
+                <ul class="nav masthead-nav">
+                  <li class="active"><a href="#">Home</a></li>
+                  <li><a href="#">About</a></li>
+                </ul>
+              </nav>
+            </div>
+          </div>
+
+          <div class="inner cover">
+            <h1 class="cover-heading">Title</h1>
+            <p class="lead">some info here</p>
+            <p class="lead">
+            </p>
+          </div>
+
+          <div class="mastfoot">
+            <div class="inner">
+              <p>Follow Steve on <a href="http://twitter.com/stuave">Twitter</a></p>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+
     </div>
 
-    <div class="col-md-6 col-md-offset-3">
-      <%= yield %>
-    </div>
-
-  </div>
-
-
-</body>
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="../../dist/js/bootstrap.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+  </body>
 </html>
