--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -1,6 +1,9 @@
+<div class="col-md-6 col-md-offset-3">
 <% @posts.each do |post| %>
  <%= render 'posts/post', post: post %>
 
  <br><br><br><br>
- 
+
 <%end%>
+
+</div>
