--- a/app/assets/stylesheets/cover.css
+++ b/app/assets/stylesheets/cover.css
@@ -28,7 +28,11 @@ a:hover {
 html,
 body {
   height: 100%;
+  background-image: url("http://i.imgur.com/mNKlWpR.jpg");
   background-color: #333;
+  background-size:cover;
+  background-repeat: no-repeat;
+  background-position:center;
 }
 body {
   color: #fff;
