added job descriptions

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,12 +9,12 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Cover Template for Bootstrap</title>
+    <title>Steve's Website</title>
 
     <!-- Bootstrap core CSS -->
     <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
+    <!-- Custom styles for this cover template -->
     <%= stylesheet_link_tag 'cover' %>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -27,11 +27,8 @@
   <body>
 
     <div class="site-wrapper">
-
       <div class="site-wrapper-inner">
-
         <div class="cover-container">
-
           <div class="masthead clearfix">
             <div class="inner">
               <h3 class="masthead-brand">Steve Zerneri</h3>
@@ -39,29 +36,78 @@
                 <ul class="nav masthead-nav">
                   <li class="active"><a href="#">Home</a></li>
                   <li><a href="#">About</a></li>
+                  <li><a href="#">Blog</a></li>
                 </ul>
               </nav>
             </div>
           </div>
 
           <div class="inner cover">
-            <h1 class="cover-heading">Title</h1>
-            <p class="lead">some info here</p>
-            <p class="lead">
-            </p>
+            <h1 class="cover-heading">Here's some info about me</h1>
+            <p class="lead">Check it out</p>
           </div>
-
-          <div class="mastfoot">
-            <div class="inner">
-              <p>Follow Steve on <a href="http://twitter.com/stuave">Twitter</a></p>
-            </div>
-          </div>
-
         </div>
-
+        </div>
       </div>
 
+      <!-- START THE FEATURETTES -->
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading"> Founder <span class="text-muted"> Lugg, San Francisco </span></h2>
+          <p class="lead"> Alongside other co-founders, I helped grow Lugg from single digits trips per week into the hundreds. I managed our fleet of movers and built demand through B2B and B2C partnerships. Lugg now has almost $4M and is backed by prominent investors like Y Combinator and SV Angel. </p>
+        </div>
+        <div class="col-md-5">
+          <img class="featurette-image img-responsive center-block" src="http://i.imgur.com/eHdiVD6.png" alt="Lugg - On Demand Moving">
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-7 col-md-push-5">
+          <h2 class="featurette-heading">Senior Operations Manager <span class="text-muted"> Uber, Los Angeles </span></h2>
+          <p class="lead">I spent most of my time at Uber focusing on city launch and supply operations. I launched cities ranging in size from Salt Lake City to Bakersfield. As Senior Ops Manager in LA, my team of operations managers and myself spearheaded partner-driver retention campaigns, and new products like uberXL and uberEATS.</p>
+        </div>
+        <div class="col-md-5 col-md-pull-7">
+          <img class="featurette-image img-responsive center-block" src="http://i.imgur.com/reTNZUY.png" alt="Uber - Your Private Driver">
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading"> Growth Hacker <span class="text-muted"> inMarket, Venice </span></h2>
+          <p class="lead">Managed performance marketing budget and used my SQL prowess to figure out what campaigns were the most profitable for acquiring customers.</p>
+        </div>
+        <div class="col-md-5">
+          <img class="featurette-image img-responsive center-block" src="http://i.imgur.com/4Mox2K2.png" alt="inMarket - iBeacon Tech">
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-7 col-md-push-5">
+          <h2 class="featurette-heading"> Financial Analyst <span class="text-muted"> Raytheon, San Diego and Boston </span></h2>
+          <p class="lead"> Managed schedule and budget for Navy shipbuilding contracts. I also helped forecast our annual operating plan, and worked with our contracts team to submit pricing proposals to the government for new contracts. Most importantly, I got to play 36 holes at Torrey Pines every other Friday. Thank you, 9/80 scheduling!</p>
+        </div>
+        <div class="col-md-5 col-md-pull-7">
+          <img class="featurette-image img-responsive center-block" src="http://i.imgur.com/Er5MgJF.png" alt="Raytheon - Defense Contractor">
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <!-- /END THE FEATURETTES -->
+
+      <div class="doing">
+        <p>Steve Test</p>
     </div>
+
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
