--- a/app/assets/stylesheets/cover.css
+++ b/app/assets/stylesheets/cover.css
@@ -64,6 +64,20 @@ body {
 }
 
 
+/* Featurettes
+------------------------- */
+
+.featurette-divider {
+  margin: 80px 0; /* Space out the Bootstrap <hr> more */
+}
+
+/* Thin out the marketing headings */
+.featurette-heading {
+  font-weight: 300;
+  line-height: 1;
+  letter-spacing: -1px;
+}
+
 /*
  * Header
  */
@@ -121,7 +135,16 @@ body {
   padding: 10px 20px;
   font-weight: bold;
 }
+/*
+ * Footer
+ */
 
+ .doing {
+   background-color: blue;
+   width: 100%;
+   left: 0;
+   position: absolute;
+ }
 
 /*
  * Footer
@@ -130,6 +153,10 @@ body {
 .mastfoot {
   color: #999; /* IE8 proofing */
   color: rgba(255,255,255,.5);
+  background-color: #333;
+  width: 100%;
+  left: 0;
+  position: absolute;
 }
 
 
@@ -144,7 +171,7 @@ body {
     top: 0;
   }
   .mastfoot {
-    position: fixed;
+    position: absolute;
     bottom: 0;
   }
   /* Start the vertical centering */
