--- a/app/assets/stylesheets/cover.css
+++ b/app/assets/stylesheets/cover.css
@@ -78,6 +78,8 @@ body {
   letter-spacing: -1px;
 }
 
+
+
 /*
  * Header
  */
@@ -140,7 +142,7 @@ body {
  */
 
  .doing {
-   background-color: blue;
+   background-color: #333;
    width: 100%;
    left: 0;
    position: absolute;
