--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -105,7 +105,7 @@
       <!-- /END THE FEATURETTES -->
 
       <div class="doing">
-        <p>Steve Test</p>
+        <p>Made in Ruby on Rails in 2015 via NYC.</p>
     </div>
 
 
