--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,36 +28,48 @@
 
     <div class="site-wrapper">
       <div class="site-wrapper-inner">
+        <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Steve Zerneri</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+
         <div class="cover-container">
           <div class="masthead clearfix">
-            <div class="inner">
-              <h3 class="masthead-brand">Steve Zerneri</h3>
-              <nav>
-                <ul class="nav masthead-nav">
-                  <li class="active"><a href="#">Home</a></li>
-                  <li><a href="#">About</a></li>
-                  <li><a href="#">Blog</a></li>
-                </ul>
-              </nav>
-            </div>
           </div>
 
           <div class="inner cover">
-            <h1 class="cover-heading">Here's some info about me</h1>
-            <p class="lead">Check it out</p>
+            <h1 class="cover-heading"></h1>
+            <p class="lead">Forget mistakes, forget failures, forget everything, except what you're going to do now and do it. Today is your lucky day.</p>
           </div>
         </div>
         </div>
       </div>
 
+      <!-- What I've Done-->
+
+      <div class="done">
+        <p>What I've Done</p>
+    </div>
+
       <!-- START THE FEATURETTES -->
 
-      <hr class="featurette-divider">
+    <hr class="featurette-divider">
 
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading"> Founder <span class="text-muted"> Lugg, San Francisco </span></h2>
-          <p class="lead"> Alongside other co-founders, I helped grow Lugg from single digits trips per week into the hundreds. I managed our fleet of movers and built demand through B2B and B2C partnerships. Lugg now has almost $4M and is backed by prominent investors like Y Combinator and SV Angel. </p>
+          <p class="featurette-lead"> Alongside other co-founders, I helped grow Lugg from single digits trips per week into the hundreds. I managed our fleet of movers and built demand through B2B and B2C partnerships. Lugg now has almost $4M and is backed by prominent investors like Y Combinator and SV Angel. </p>
         </div>
         <div class="col-md-5">
           <img class="featurette-image img-responsive center-block" src="http://i.imgur.com/eHdiVD6.png" alt="Lugg - On Demand Moving">
@@ -69,7 +81,7 @@
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
           <h2 class="featurette-heading">Senior Operations Manager <span class="text-muted"> Uber, Los Angeles </span></h2>
-          <p class="lead">I spent most of my time at Uber focusing on city launch and supply operations. I launched cities ranging in size from Salt Lake City to Bakersfield. As Senior Ops Manager in LA, my team of operations managers and myself spearheaded partner-driver retention campaigns, and new products like uberXL and uberEATS.</p>
+          <p class="featurette-lead">I spent most of my time at Uber focusing on city launch and supply operations. I launched cities ranging in size from Salt Lake City to Bakersfield. As Senior Ops Manager in LA, my team of operations managers and myself spearheaded partner-driver retention campaigns, and new products like uberXL and uberEATS.</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
           <img class="featurette-image img-responsive center-block" src="http://i.imgur.com/reTNZUY.png" alt="Uber - Your Private Driver">
@@ -81,7 +93,7 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading"> Growth Hacker <span class="text-muted"> inMarket, Venice </span></h2>
-          <p class="lead">Managed performance marketing budget and used my SQL prowess to figure out what campaigns were the most profitable for acquiring customers.</p>
+          <p class="featurette-lead">Managed performance marketing budget and used my SQL prowess to figure out what campaigns were the most profitable for acquiring customers.</p>
         </div>
         <div class="col-md-5">
           <img class="featurette-image img-responsive center-block" src="http://i.imgur.com/4Mox2K2.png" alt="inMarket - iBeacon Tech">
@@ -93,7 +105,7 @@
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
           <h2 class="featurette-heading"> Financial Analyst <span class="text-muted"> Raytheon, San Diego and Boston </span></h2>
-          <p class="lead"> Managed schedule and budget for Navy shipbuilding contracts. I also helped forecast our annual operating plan, and worked with our contracts team to submit pricing proposals to the government for new contracts. Most importantly, I got to play 36 holes at Torrey Pines every other Friday. Thank you, 9/80 scheduling!</p>
+          <p class="featurette-lead"> Managed schedule and budget for Navy shipbuilding contracts. I also helped forecast our annual operating plan, and worked with our contracts team to submit pricing proposals to the government for new contracts. Most importantly, I got to play 36 holes at Torrey Pines every other Friday. Thank you, 9/80 scheduling!</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
           <img class="featurette-image img-responsive center-block" src="http://i.imgur.com/Er5MgJF.png" alt="Raytheon - Defense Contractor">
