add social feeds

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,7 +59,7 @@
       <!-- What I've Done-->
 
       <div class="done">
-        <p>What I've Done</p>
+        <p>past</p>
     </div>
 
       <!-- START THE FEATURETTES -->
@@ -112,13 +112,27 @@
         </div>
       </div>
 
-      <hr class="featurette-divider">
+          <hr class="featurette-divider">
 
-      <!-- /END THE FEATURETTES -->
+      <div class="social">
+        <h1> social </h1>
 
-      <div class="doing">
-        <p>Made in Ruby on Rails in 2015 via NYC.</p>
+
+      <div class="social-feeds">
+
+        <div class="col-md-6">
+          <h1>twitter</h1>
+      <a class="twitter-timeline" href="https://twitter.com/Stuave" data-widget-id="661574394372874240">Tweets by @Stuave</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+  </div>
+       <div class="col-md-6">
+           <h1>instagram</h1>
+         <!-- SnapWidget -->
+<!-- INSTANSIVE WIDGET --><script src="//instansive.com/widget/js/instansive.js"></script><iframe src="//instansive.com/widgets/2fbc4e80d45525ec098b4a3fcab0f93cf68578b4.html" id="instansive_2fbc4e80d4" name="instansive_2fbc4e80d4"  scrolling="no" allowtransparency="true" class="instansive-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
+      </div>
     </div>
+  </div>
+
 
 
     <!-- Bootstrap core JavaScript
