change static quote

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,8 @@
 
           <div class="inner cover">
             <h1 class="cover-heading"></h1>
-            <p class="lead">Forget mistakes, forget failures, forget everything, except what you're going to do now and do it. Today is your lucky day.</p>
+            <p class="lead">"It's easy to live after the world's opinion. It's easy in solitude to live after your own;
+            but the great man is he who in the midst of the crowd keeps with perfect sweetness the independence of solitude." <br> -Ralph Waldo Emerson</p>
           </div>
         </div>
         </div>
@@ -115,6 +116,7 @@
           <hr class="featurette-divider">
 
       <div class="social">
+
         <h1> social </h1>
 
 
